// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Autocomplete should allow the CircularProgress bar props to be configured with loadingProps 1`] = `
<span
  aria-labelledby="label-id"
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--centered rmd-primary-color custom-class-name"
  id="circular-progress-:r3f:"
  role="progressbar"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;

exports[`Autocomplete should apply the correct styling, HTML attributes, and allow a ref 1`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-autocomplete rmd-autocomplete--ra1"
  data-testid="container"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="autocomplete-listbox-:r1:"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="autocomplete-:r0:"
    placeholder=" "
    role="combobox"
    tabindex="0"
    type="text"
  />
  <label
    class="rmd-label rmd-label--floating"
    for="autocomplete-:r0:"
  >
    Field
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-box rmd-box--wrap rmd-autocomplete__right-addon rmd-background-container"
  >
    <button
      aria-controls="autocomplete-:r0:"
      aria-expanded="false"
      aria-label="Fruits"
      class="rmd-button rmd-button--icon rmd-interaction-surface"
      id="autocomplete-dropdown-:r5:"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
      >
        arrow_drop_down
      </span>
    </button>
  </span>
</div>
`;

exports[`Autocomplete should apply the correct styling, HTML attributes, and allow a ref 2`] = `
<div
  class="rmd-text-field-container rmd-text-field-container--outline rmd-text-field-container--hoverable rmd-text-field-container--label rmd-text-field-container--outline-right rmd-autocomplete rmd-autocomplete--ra1 custom-class-name"
  data-testid="container"
  style="color: white;"
>
  <input
    aria-activedescendant=""
    aria-autocomplete="list"
    aria-controls="autocomplete-listbox-:r1:"
    aria-expanded="false"
    aria-haspopup="listbox"
    class="rmd-text-field rmd-text-field--placeholder-hidden"
    id="autocomplete-:r0:"
    placeholder=" "
    role="combobox"
    tabindex="0"
    type="text"
  />
  <label
    class="rmd-label rmd-label--floating"
    for="autocomplete-:r0:"
  >
    Field
  </label>
  <span
    class="rmd-text-field-addon rmd-text-field-addon--after rmd-box rmd-box--wrap rmd-autocomplete__right-addon rmd-background-container"
  >
    <button
      aria-controls="autocomplete-:r0:"
      aria-expanded="false"
      aria-label="Fruits"
      class="rmd-button rmd-button--icon rmd-interaction-surface"
      id="autocomplete-dropdown-:r5:"
      tabindex="-1"
      type="button"
    >
      <span
        aria-hidden="true"
        class="rmd-icon rmd-icon--font material-icons rmd-icon-rotator rmd-icon-rotator--animate"
      >
        arrow_drop_down
      </span>
    </button>
  </span>
</div>
`;

exports[`Autocomplete should be able to render a CircularProgress bar when the loading prop is enabled 1`] = `
<span
  aria-label="Loading"
  aria-valuemax="100"
  aria-valuemin="0"
  class="rmd-circular-progress rmd-circular-progress--centered"
  id="circular-progress-:r39:"
  role="progressbar"
>
  <svg
    class="rmd-circular-progress__svg rmd-circular-progress__svg--indeterminate"
    viewBox="0 0 66 66"
  >
    <circle
      class="rmd-circular-progress__circle rmd-circular-progress__circle--indeterminate"
      cx="33"
      cy="33"
      r="30"
    />
  </svg>
</span>
`;
